<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_title"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_distance"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_2"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_price"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_3"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_autonomy"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_4"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/text_5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_valueToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_valueToPay"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_valueToCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_valueToCalculate" />

</LinearLayout>